/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'java'
    id "org.hidetake.ssh" version "2.11.2"
    id 'war'
}

repositories {

    mavenCentral()

    // Thêm repository của Google
    maven {
        url = uri('https://maven.google.com/')
    }

    // Thêm repository của Sonatype OSS
    maven {
        url = uri('https://oss.sonatype.org/content/repositories/releases/')
    }

    // Thêm repository của Maven Central
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
    maven {
        url 'https://maven.google.com/'
        name 'Google'
    }
    google()
}


dependencies {

    implementation 'net.sourceforge.streamsupport:streamsupport:1.7.3'
    implementation 'mysql:mysql-connector-java:8.0.28'
    implementation 'org.jdbi:jdbi3-core:3.23.0'
    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'javax.json:javax.json-api:1.1.4'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'org.apache.httpcomponents:fluent-hc:4.5.13'
    implementation 'com.sun.mail:javax.mail:1.6.2'
    implementation 'org.jdbi:jdbi3-core:3.23.0'
    implementation 'javax.servlet:jstl:1.2'
    implementation 'org.glassfish:javax.json:1.1.4'
    implementation 'junit:junit:3.8.1'
    implementation 'org.slf4j:slf4j-api:1.7.25'
    implementation 'com.zaxxer:HikariCP:3.1.0'
    implementation 'net.coobird:thumbnailator:0.4.13'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'javax.websocket:javax.websocket-api:1.1'
    implementation group: 'com.paypal.sdk', name: 'checkout-sdk', version: '1.0.2'
    implementation group: 'com.paypal.sdk', name: 'paypal-core', version: '1.6.5'
    implementation 'commons-fileupload:commons-fileupload:1.5'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
    implementation 'org.json:json:20210307'
    implementation group: 'com.paypal.sdk', name: 'checkout-sdk', version: '1.0.2'
    implementation group: 'com.paypal.sdk', name: 'paypal-core', version: '1.6.5'
    implementation 'net.sourceforge.streamsupport:streamsupport:1.7.3'
    implementation 'mysql:mysql-connector-java:8.0.26'
    implementation 'org.jdbi:jdbi3-core:3.23.0'
    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'javax.json:javax.json-api:1.1.4'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'org.apache.httpcomponents:fluent-hc:4.5.13'
    implementation 'com.sun.mail:javax.mail:1.6.2'
    implementation 'org.jdbi:jdbi3-core:3.23.0'
    implementation 'javax.servlet:jstl:1.2'
    implementation 'org.glassfish:javax.json:1.1.4'
    implementation 'junit:junit:3.8.1'
    implementation 'org.slf4j:slf4j-api:1.7.25'
    implementation 'com.zaxxer:HikariCP:3.1.0'
    implementation 'net.coobird:thumbnailator:0.4.13'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    implementation 'com.squareup.okhttp3:okhttp:4.9.2'

//quan li blog
    implementation 'org.jsoup:jsoup:1.15.4'
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.0'
    implementation 'junit:junit:3.8.1'
    implementation 'org.slf4j:slf4j-api:1.7.25'
    implementation 'com.zaxxer:HikariCP:3.1.0'
    implementation 'org.apache.poi:poi:5.0.0'
    implementation 'org.apache.poi:poi-ooxml:5.0.0'
    implementation 'org.jsoup:jsoup:1.14.3'
    implementation 'commons-fileupload:commons-fileupload:1.5'
//thư viện chức năng login fb
    implementation group: 'commons-logging', name: 'commons-logging', version: '1.2'
    implementation group: 'com.restfb', name: 'restfb', version: '2.27.0'
    implementation group: 'org.apache.httpcomponents', name: 'fluent-hc', version: '4.5.5'
    implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.9'
    implementation 'org.apache.poi:poi-ooxml:5.2.0'

    implementation 'com.google.api-client:google-api-client:1.32.1'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
    implementation 'com.google.http-client:google-http-client-jackson2:1.32.1'
//    implementation  'com.google.apis:google-api-services-analytics:v3-rev116-1.20.0'
// https://mvnrepository.com/artifact/com.google.apis/google-api-services-analytics
// https://mvnrepository.com/artifact/com.google.apis/google-api-services-analytics
// https://mvnrepository.com/artifact/com.google.apis/google-api-services-analytics
    implementation 'com.google.apis:google-api-services-analytics:v3-rev169-1.25.0'
    implementation 'com.google.api-client:google-api-client:1.32.1'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
    implementation 'com.google.http-client:google-http-client-jackson2:1.32.1'
    implementation 'com.google.apis:google-api-services-analytics:v3-rev169-1.25.0'
    // https://mvnrepository.com/artifact/com.google.api-client/google-api-client
// https://mvnrepository.com/artifact/com.google.apis/google-api-services-analyticsreporting
    implementation 'com.google.apis:google-api-services-analyticsreporting:v4-rev174-1.25.0'
    implementation 'org.jsoup:jsoup:1.16.1'

    implementation 'com.google.api-client:google-api-client:1.15.0'



    implementation 'com.google.guava:guava:30.1-jre'



}
tasks.withType(Test) {
    systemProperty 'junit.jupiter.execution.parallel.enabled', true
    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
}

group = 'org.example'

description = 'AnimeWeb Maven Webapp'
sourceCompatibility = '17'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
apply plugin: 'org.hidetake.ssh'
remotes {
    host {
        host = '35.213.189.29'
        user = 'yaemiko27092002'
        identity =file('C:/Users/Admin/.ssh/id_rsa')

    }
}
ssh.settings {
    knownHosts = allowAnyHosts
}
//task docker_app_start {
//    doLast {
//        println 'begin docker_app_start'
//        ssh.run {
//            session(remotes.host) {
//                execute 'docker stop tomcat9', ignoreError: true
//                execute 'docker run -it  -d ' +
//                        '--name tomcat9 ' +
//                        '-v /usr/deploy:/usr/local/tomcat/webapps ' +
//                        '-p 80:8080 ' +
//                        'tomcat:9.0&'
//            }
//        }
//    }
//}
task docker_upload_file_to_server {
    doLast {
        println 'begin docker_upload_file_to_server'
        ssh.run {
            session(remotes.host) {
                put from: "${project.projectDir}/build/libs/AnimeWeb.war",
                        into: "/usr/deploy/.war"

            }
        }

    }
}
//task docker_upload_file_to_server {
//    doLast {
//        println 'begin docker_upload_file_to_server'
//        ssh.run {
//            session(remotes.host) {
//                put from: "${project.projectDir}/build/libs/ca_bundle.crt",
//                        into: "/usr/deploy/ca_bundle.crt"
//                put from: "${project.projectDir}/build/libs/certificate.crt",
//                        into: "/usr/deploy/certificate.crt"
//                put from: "${project.projectDir}/build/libs/private.key",
//                        into: "/usr/deploy/private.key"
//            }
//        }
//
//    }
//}
//task docker_app_start {
//        doLast {
//            println 'begin docker_app_start'
//            ssh.run {
//                session(remotes.host) {
//                    execute '-v /usr/deploy/certs:/usr/local/tomcat/certs'
//                }
//            }
//        }
//    }
//task docker_app_start {
//    doLast {
//        println 'begin docker_app_start'
//        ssh.run {
//            session(remotes.host) {
//                execute 'docker stop tomcat9', ignoreError: true
//                execute 'docker run -it -d ' +
//                        '--name tomcat9 ' +
//                        '-v /usr/deploy:/usr/local/tomcat/webapps ' +
//                        '-p 80:8080 ' + '-p 443:8443'+
//                        'tomcat:9.0&'
//            }
//        }
//    }
//}




task docker_deploy {
//    docker_deploy.dependsOn docker_app_start
////    docker_deploy.dependsOn docker_upload_file_to_server
//    docker_deploy.dependsOn build
//    tasks.getByName('docker_app_start').mustRunAfter docker_upload_file_to_server
}

targetCompatibility = JavaVersion.VERSION_17

